fix alignment issue on mobile with inset photos

--- a/resources/assets/css/magazine-styles.css
+++ b/resources/assets/css/magazine-styles.css
@@ -348,7 +348,7 @@ img.magazine-logo {
     margin-right: 1rem;
     max-width: 100%;
     clear:both;
-    float:left !important;
+    /*float:left !important;*/
   }
 }
 #story-content p img {
